--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext {
+    SUPPORT_VERSION = '25.0.0'
+}
+
 buildscript {
     repositories {
         jcenter()
