--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
+    compile "com.android.support:recyclerview-v7:${project.SUPPORT_VERSION}"
+    compile "com.android.support:design:${project.SUPPORT_VERSION}"
+    compile "com.android.support:cardview-v7:${project.SUPPORT_VERSION}"
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile("com.android.support:recyclerview-v7:${project.SUPPORT_VERSION}")
-    compile("com.android.support:design:${project.SUPPORT_VERSION}")
-    compile("com.android.support:cardview-v7:${project.SUPPORT_VERSION}")
     testCompile 'junit:junit:4.12'
 }
