--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     compile "com.android.support:design:${project.SUPPORT_VERSION}"
     compile "com.android.support:cardview-v7:${project.SUPPORT_VERSION}"
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile 'io.realm:realm-android:0.83.0+'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
