--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'realm-android'
 
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
 
     dependencies {
         classpath 'me.tatarka:gradle-retrolambda:3.4.0'
+        classpath "io.realm:realm-gradle-plugin:2.2.1"
     }
 }
 
@@ -63,7 +66,6 @@ dependencies {
     compile ("com.android.support:design:${project.SUPPORT_VERSION}")
     compile ("com.android.support:cardview-v7:${project.SUPPORT_VERSION}")
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'io.realm:realm-android:0.83.0+'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
