--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.realm:android-adapters:1.4.0'
     compile ("com.android.support:recyclerview-v7:${project.SUPPORT_VERSION}")
     compile ("com.android.support:design:${project.SUPPORT_VERSION}")
     compile ("com.android.support:cardview-v7:${project.SUPPORT_VERSION}")
