--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="802c0262411619d63bca2eefe8a872a109b06653" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
