--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
@@ -15,6 +16,7 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.4.0'
         classpath "io.realm:realm-gradle-plugin:2.2.1"
         classpath 'io.fabric.tools:gradle:1.22.0'
@@ -68,18 +70,28 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    //RxJava
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
+    //Realm
     compile 'io.realm:android-adapters:1.4.0'
+    //support
     compile ("com.android.support:recyclerview-v7:${project.SUPPORT_VERSION}")
     compile ("com.android.support:design:${project.SUPPORT_VERSION}")
     compile ("com.android.support:cardview-v7:${project.SUPPORT_VERSION}")
-    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    //dagger
+    compile 'com.google.dagger:dagger:2.7'
+    apt 'com.google.dagger:dagger-compiler:2.7'
+    //test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    //crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
+    //other
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
