--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
+
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -16,6 +18,7 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.4.0'
         classpath "io.realm:realm-gradle-plugin:2.2.1"
@@ -83,9 +86,9 @@ dependencies {
     //Realm
     compile 'io.realm:android-adapters:1.4.0'
     //support
-    compile ("com.android.support:recyclerview-v7:${project.SUPPORT_VERSION}")
-    compile ("com.android.support:design:${project.SUPPORT_VERSION}")
-    compile ("com.android.support:cardview-v7:${project.SUPPORT_VERSION}")
+    compile("com.android.support:recyclerview-v7:${project.SUPPORT_VERSION}")
+    compile("com.android.support:design:${project.SUPPORT_VERSION}")
+    compile("com.android.support:cardview-v7:${project.SUPPORT_VERSION}")
     //dagger
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
@@ -98,6 +101,9 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
+    //butter knife
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     //other
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
